# glad

./: .gitignore  CMakeLists.txt  README.md  glad.cmake  glad_permalink.txt
include/glad/: glad.h
src/: glad.c
src_cpp/: glad.cpp  glad.hpp
